# anti-ddos-system

./: .gitignore  LICENSE  README.md  requirements.txt
src/: main.py
src/config/: settings.yaml
src/core/: analyzer.py  blocker.py  cpp_bridge.py  monitor.py
src/cpp/: CMakeLists.txt  packet_analyzer.cpp  packet_analyzer.h
src/utils/: config.py  logger.py
